Make config be in directory; Needed to store kmd files

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,6 +10,11 @@ tasks:
     cmds:
       - go build -o {{.EXE}}
 
+  run:
+    cmds:
+      - ./{{.EXE}}
+    silent: true
+
   clean:
     cmds:
       - rm {{.EXE}}
