Starting daemon; Check running daemon

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -13,6 +13,11 @@ tasks:
   run:
     cmds:
       - ./{{.EXE}}
+    # silent: true
+
+  test:
+    cmds:
+      - go test ./...
     silent: true
 
   clean:
